tests/ui/lifetimes/closure-must-return-bound-lifetime.stderr
error: lifetime may not live long enough
  --> $DIR/closure-must-return-bound-lifetime.rs:6:16
   |
LL |     foo(|a, b| b)
   |          -  -  ^ closure was supposed to return data with lifetime `'2` but it is returning data with lifetime `'1`
   |          |  |
   |          |  has type `&'1 u32`
   |          has type `&'2 u32`

error: aborting due to 1 previous error

